--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         </activity>
 
         <service android:name=".MyService"/>
+        <service android:name=".MyForegroundService"/>
+
     </application>
 
 </manifest>
