--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ru.sumin.servicestest">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,8 +20,12 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".MyService"/>
-        <service android:name=".MyForegroundService"/>
+        <service android:name=".MyService" />
+        <service android:name=".MyForegroundService" />
+        <service android:name=".MyIntentService" />
+        <service
+            android:name=".MyJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
 
     </application>
 
